[package]
name = "hello-rust-api"
version = "0.1.0"
authors = ["Jacob Loeser <jacobharryloeser@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
env_logger = "0.10.0"
